# CG

./: LECTURE_NOTES.md
Exercise0/: CMakeLists.txt  README.md
Exercise0/src/: GLApp.cpp  GLExample.cpp
Exercise1/: CMakeLists.txt  README.md
Exercise1/src/: GLExample.cpp  GLExample.h  Torus.cpp
Exercise2/: CMakeLists.txt  README.md
Exercise2/shader/: Normals.vert  Shape.vert
Exercise2/src/: GLExercise.cpp  MultiLine.cpp  Shape.cpp
Exercise3/: CMakeLists.txt  README.md
Exercise3/src/: GLExample.cpp  GLExample.h
Exercise4/: CMakeLists.txt  README.md
Exercise4/imgui/: Makefile  cmake_install.cmake
Exercise4/shader/: TexturedShape.frag  TexturedShape.vert
Exercise4/src/: Cube.cpp  GLExample.cpp  Texture.cpp  Torus.cpp
